--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@chakra-ui/react-env": "^1.1.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@icon-park/react": "^1.3.5",
     "framer-motion": "^5.6.0",
+    "ioredis": "^4.28.5",
+    "is-absolute-url": "^4.0.1",
+    "nanoid": "^3.3.1",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "@icon-park/react": "^1.3.5"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
+    "@types/ioredis": "^4.28.8",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
