--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@icon-park/react": "^1.3.5",
     "framer-motion": "^5.6.0",
     "ioredis": "^4.28.5",
-    "is-absolute-url": "^4.0.1",
+    "is-url": "^1.2.4",
     "nanoid": "^3.3.1",
     "next": "12.0.8",
     "react": "17.0.2",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.10",
     "@types/ioredis": "^4.28.8",
+    "@types/is-url": "^1.2.30",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
