--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "is-url": "^1.2.4",
     "nanoid": "^3.3.1",
     "next": "12.0.8",
+    "prisma": "^3.9.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
