--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@icon-park/react": "^1.3.5",
+    "@prisma/client": "^3.9.2",
     "framer-motion": "^5.6.0",
     "ioredis": "^4.28.5",
     "is-url": "^1.2.4",
