--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@icon-park/react": "^1.3.5",
     "@prisma/client": "^3.9.2",
+    "d3-geo": "^3.0.1",
     "framer-motion": "^5.6.0",
     "ioredis": "^4.28.5",
     "is-url": "^1.2.4",
@@ -21,7 +22,11 @@
     "next": "12.0.8",
     "prisma": "^3.9.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-globe": "^5.0.2",
+    "react-globe.gl": "^2.20.4",
+    "three": "^0.137.5",
+    "three-globe": "^2.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
@@ -29,6 +34,7 @@
     "@types/is-url": "^1.2.30",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
+    "@types/three": "^0.137.0",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.5"
