--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/plots": "^1.0.9",
     "@chakra-ui/react": "^1.7.4",
     "@chakra-ui/react-env": "^1.1.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@icon-park/react": "^1.3.5",
     "@prisma/client": "^3.9.2",
+    "cobe": "^0.4.1",
     "d3-geo": "^3.0.1",
     "framer-motion": "^5.6.0",
     "ioredis": "^4.28.5",
     "is-url": "^1.2.4",
+    "leaflet": "^1.7.1",
     "nanoid": "^3.3.1",
     "next": "12.0.8",
     "prisma": "^3.9.2",
@@ -25,6 +28,7 @@
     "react-dom": "17.0.2",
     "react-globe": "^5.0.2",
     "react-globe.gl": "^2.20.4",
+    "react-leaflet": "^3.2.5",
     "three": "^0.137.5",
     "three-globe": "^2.22.1"
   },
@@ -32,6 +36,7 @@
     "@babel/core": "^7.16.10",
     "@types/ioredis": "^4.28.8",
     "@types/is-url": "^1.2.30",
+    "@types/leaflet": "^1.7.9",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "@types/three": "^0.137.0",
