--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hot-search-react",
-  "private": true,
+  "name": "url-shorter",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,21 +16,16 @@
     "@icon-park/react": "^1.3.5",
     "@prisma/client": "^3.9.2",
     "cobe": "^0.4.1",
-    "d3-geo": "^3.0.1",
-    "framer-motion": "^5.6.0",
+    "framer-motion": "^6.2.7",
     "ioredis": "^4.28.5",
     "is-url": "^1.2.4",
     "leaflet": "^1.7.1",
     "nanoid": "^3.3.1",
-    "next": "12.0.8",
+    "next": "^12.1.0",
     "prisma": "^3.9.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-globe": "^5.0.2",
-    "react-globe.gl": "^2.20.4",
-    "react-leaflet": "^3.2.5",
-    "three": "^0.137.5",
-    "three-globe": "^2.22.1"
+    "react-leaflet": "^3.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
@@ -39,7 +34,6 @@
     "@types/leaflet": "^1.7.9",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
-    "@types/three": "^0.137.0",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.5"
