--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "nanoid": "^3.3.1",
     "next": "^12.1.0",
     "prisma": "^3.9.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.5"
   },
   "devDependencies": {
@@ -32,10 +32,10 @@
     "@types/ioredis": "^4.28.8",
     "@types/is-url": "^1.2.30",
     "@types/leaflet": "^1.7.9",
-    "@types/node": "17.0.10",
-    "@types/react": "17.0.38",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "typescript": "4.5.5"
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "eslint": "^8.10.0",
+    "eslint-config-next": "^12.1.0",
+    "typescript": "^4.6.2"
   }
 }
