--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "url-shorter",
   "private": false,
+  "version": "1.1.0",
+  "description": "url shortener",
+  "main": "index.js",
+  "repository": "git@github.com:akazwz/url-shorter.git",
+  "author": "akazwz <akazwz@pm.me>",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,33 +15,36 @@
   },
   "dependencies": {
     "@ant-design/plots": "^1.0.9",
-    "@chakra-ui/react": "^1.8.8",
-    "@chakra-ui/react-env": "^1.1.1",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.6.0",
-    "@icon-park/react": "^1.3.5",
-    "@prisma/client": "^3.12.0",
+    "@chakra-ui/react": "^2.2.1",
+    "@chakra-ui/react-env": "^2.0.2",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@icon-park/react": "^1.4.2",
+    "@prisma/client": "^4.0.0",
+    "axios": "^0.27.2",
     "cobe": "^0.5.0",
-    "framer-motion": "^6.3.1",
-    "ioredis": "^5.0.4",
+    "framer-motion": "^6.4.3",
+    "ioredis": "^5.1.0",
     "is-url": "^1.2.4",
     "leaflet": "^1.8.0",
-    "nanoid": "^3.3.3",
-    "next": "^12.1.5",
-    "prisma": "^3.12.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-leaflet": "^4.0.0"
+    "nanoid": "^4.0.0",
+    "next": "^12.2.1",
+    "next-i18next": "^11.0.0",
+    "prisma": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.0.1",
+    "recoil": "^0.7.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
+    "@babel/core": "^7.18.6",
     "@types/ioredis": "^4.28.10",
     "@types/is-url": "^1.2.30",
-    "@types/leaflet": "^1.7.9",
-    "@types/node": "^17.0.21",
-    "@types/react": "^18.0.6",
-    "eslint": "^8.14.0",
-    "eslint-config-next": "^12.1.0",
-    "typescript": "^4.6.2"
+    "@types/leaflet": "^1.7.11",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "eslint": "^8.19.0",
+    "eslint-config-next": "^12.2.1",
+    "typescript": "^4.7.4"
   }
 }
