--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.9.3",
     "@icon-park/react": "^1.4.2",
     "@prisma/client": "^4.0.0",
+    "@upstash/redis": "^1.7.0",
     "axios": "^0.27.2",
     "cobe": "^0.5.0",
     "framer-motion": "^6.4.3",
@@ -29,6 +30,7 @@
     "leaflet": "^1.8.0",
     "nanoid": "^4.0.0",
     "next": "^12.2.1",
+    "next-absolute-url": "^1.2.2",
     "next-i18next": "^11.0.0",
     "prisma": "^4.0.0",
     "react": "^18.2.0",
