--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@icon-park/react": "^1.4.2",
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^4.0.0",
     "@upstash/redis": "^1.7.0",
     "axios": "^0.27.2",
     "cobe": "^0.5.0",
     "framer-motion": "^6.4.3",
-    "ioredis": "^5.1.0",
     "is-url": "^1.2.4",
     "leaflet": "^1.8.0",
     "nanoid": "^4.0.0",
     "next": "^12.2.1",
     "next-absolute-url": "^1.2.2",
+    "next-auth": "^4.9.0",
     "next-i18next": "^11.0.0",
-    "prisma": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1",
@@ -47,6 +47,7 @@
     "@types/react": "^18.0.15",
     "eslint": "^8.19.0",
     "eslint-config-next": "^12.2.1",
+    "prisma": "^4.0.0",
     "typescript": "^4.7.4"
   }
 }
