--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "akazwz <akazwz@pm.me>",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 80",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
