update env example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-UPSTASH_REDIS_REST_URL="https://xx-xx.upstash.io"
-UPSTASH_REDIS_REST_TOKEN="xxxxxx"
+UPSTASH_REDIS_REST_URL="https://xxxxxxxx.upstash.io"
+UPSTASH_REDIS_REST_TOKEN="YOUR_UPSTASH_REST_TOKEN"
+
+DATABASE_URL="postgresql://postgres:xxxxxxx"
+
+GITHUB_CLIENT_ID='YOUR_GITHUB_CLIENT_ID'
+GITHUB_CLIENT_SECRET='YOUR_GITHUB_CLIENT_SECRET'
+
+NEXTAUTH_SECRET="xxxxxxxxxx"
